Added functionality and got simple trajectories running

--- a/src/chomp-multigrid/CMakeLists.txt
+++ b/src/chomp-multigrid/CMakeLists.txt
@@ -20,3 +20,8 @@ add_subdirectory(mzcommon)
 include_directories(mzcommon)
 
 add_subdirectory(chomp)
+include_directories( chomp )
+
+
+link_directories ( ${CMAKE_CURRENT_SOURCE_DIR}/mzcommon
+                   ${CMAKE_CURRENT_SOURCE_DIR}/chomp   )
