Suffering from concurrency bug. I have no idea why

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(orchomp SHARED
     src/orchomp_kdata.cpp
     src/orchomp_mod_parse.cpp
     src/orchomp_distancefield.cpp
+    src/orchomp_mod_collision.cpp
 
     src/utils/os.c
     src/utils/util_shparse.c
