--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,17 @@
 cmake_minimum_required(VERSION 2.6)
 project( orchomp )
 
+set( CMAKE_BUILD_TYPE Debug)
+
+#$ cmake -DCMAKE_BUILD_TYPE="Debug" .
+set(CMAKE_C_FLAGS_DEBUG "-O")
+set(CMAKE_CXX_FLAGS_DEBUG "-O")
+
+#$ cmake -DCMAKE_BUILD_TYPE="Release" 
+set(CMAKE_C_FLAGS_RELEASE "-O3")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+
+
 include(src/chomp-multigrid/mzsettings.cmake)
 
 find_package(OpenRAVE REQUIRED)
@@ -28,6 +39,19 @@ set_target_properties(orchomp PROPERTIES COMPILE_FLAGS
                       "${OpenRAVE_LINK_FLAGS}")
 target_link_libraries(orchomp chomp mzcommon
                       gsl ${OpenRAVE_LIBRARIES})
+
+
+ADD_CUSTOM_TARGET(debug
+  COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Debug ${CMAKE_SOURCE_DIR}
+  COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target all
+  COMMENT "Switch CMAKE_BUILD_TYPE to Debug"
+  )
+
+ADD_CUSTOM_TARGET(release
+  COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Release ${CMAKE_SOURCE_DIR}
+  COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target all
+  COMMENT "Switch CMAKE_BUILD_TYPE to Release"
+  )
 
 #include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 #rosbuild_init()
