Fixed mutex problem

--- a/src/chomp-multigrid/CMakeLists.txt
+++ b/src/chomp-multigrid/CMakeLists.txt
@@ -1,6 +1,8 @@
 # CMakeLists.txt for hubomz
 cmake_minimum_required(VERSION 2.6)
 
+find_package( Threads )
+
 set(CMAKE_BUILD_TYPE Release)
 project(CHOMP_MULTIGRID)
 
