--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,6 @@ set(CMAKE_CXX_FLAGS_DEBUG "-O")
 set(CMAKE_C_FLAGS_RELEASE "-O3")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
-
 include(src/chomp-multigrid/mzsettings.cmake)
 
 find_package(OpenRAVE REQUIRED)
@@ -20,7 +19,18 @@ link_directories(${OpenRAVE_LIBRARY_DIRS})
 
 add_subdirectory( src/chomp-multigrid )
 
-add_library(orchomp SHARED 
+#This is all of the ros stuff.
+set( ROS TRUE )
+if (ROS )
+    include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+    rosbuild_init()
+    set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+    set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+endif( ROS )
+
+# end of the ros stuff
+
+set( ORCHOMPLIBS   
     src/orchomp.cpp
 
     src/orchomp_mod_utils.cpp
@@ -35,7 +45,14 @@ add_library(orchomp SHARED
     src/utils/os.c
     src/utils/util_shparse.c
     src/utils/timer.h
-)
+    )
+
+#uncomment the below line to build normally.
+if( ROS )
+    rosbuild_add_library( orchomp ${ORCHOMPLIBS} )
+else( ROS )
+    add_library(orchomp SHARED ${ORCHOMPLIBS})
+endif( ROS )
 
 set_target_properties(orchomp PROPERTIES COMPILE_FLAGS
                       "${OpenRAVE_CXX_FLAGS}" LINK_FLAGS 
@@ -55,31 +72,3 @@ ADD_CUSTOM_TARGET(release
   COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target all
   COMMENT "Switch CMAKE_BUILD_TYPE to Release"
   )
-
-#include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
-#rosbuild_init()
-#set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
-
-#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
-
-#add_subdirectory( src/chomp-multigrid )
-
-
-#rosbuild_add_library(orchomp
-#   src/orchomp.cpp
-#   src/orchomp_mod.cpp
-#   src/orchomp_kdata.cpp
-#   src/orwrap.cpp
-
-#   src/chomp-multigrid/chomp/Chomp.cpp   
-#   src/chomp-multigrid/chomp/ConstraintFactory.cpp   
-#   src/chomp-multigrid/chomp/Constraint.cpp   
-
-#   src/utils/os.c
-#   src/utils/util_shparse.c
-#   
-#   )
-
-#target_link_libraries( orchomp chomp gsl )
-#target_link_libraries(orcdchomp blas lapacke lapack gsl)
