progressing on gradient code

--- a/src/chomp-multigrid/CMakeLists.txt
+++ b/src/chomp-multigrid/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.6)
 
 find_package( Threads )
 
-set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Debug)
 project(CHOMP_MULTIGRID)
 
 include(mzsettings.cmake)
