added chomp/nlopt files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set( ORCHOMPLIBS
     src/orchomp_distancefield.cpp
     src/orchomp_collision.cpp
     src/orchomp_constraint.cpp
+    src/orchomp_collision_pruner.cpp
 
     src/utils/os.c
     src/utils/util_shparse.c
