--- a/src/chomp-multigrid/CMakeLists.txt
+++ b/src/chomp-multigrid/CMakeLists.txt
@@ -24,6 +24,7 @@ include_directories(mzcommon)
 add_subdirectory(chomp)
 include_directories( chomp )
 
+add_subdirectory( nlopt )
 
 link_directories ( ${CMAKE_CURRENT_SOURCE_DIR}/mzcommon
                    ${CMAKE_CURRENT_SOURCE_DIR}/chomp   )
