Optimized collision detection

--- a/src/chomp-multigrid/CMakeLists.txt
+++ b/src/chomp-multigrid/CMakeLists.txt
@@ -25,6 +25,11 @@ add_subdirectory(chomp)
 include_directories( chomp )
 
 add_subdirectory( nlopt )
+include_directories( nlopt )
+
+add_subdirectory( demo )
 
 link_directories ( ${CMAKE_CURRENT_SOURCE_DIR}/mzcommon
-                   ${CMAKE_CURRENT_SOURCE_DIR}/chomp   )
+                   ${CMAKE_CURRENT_SOURCE_DIR}/chomp
+                   ${CMAKE_CURRENT_SOURCE_DIR}/nlopt
+                   )
